[metadata]
name = keystone_exporter
version = attr: keystone_exporter.__version__
description = Prometheus exporter for OpenStack Keystone
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/larsks/libvirt_exporter
author = Lars Kellogg-Stedman
author_email = lars@oddbit.com

[options]
packages = find:
install_requires =
    click
    openstacksdk
    prometheus_client
    pyyaml

[options.entry_points]
console_scripts =
    keystone-exporter = keystone_exporter.main:main
